try to fix phpstan config

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,10 +1,7 @@
 parameters:
   level: 6
   paths:
-    - .
-  excludePaths:
-    - vendor
-    - tests
+    - ./src
   checkGenericClassInNonGenericObjectType: false
   ignoreErrors:
     - '#Method [a-zA-Z0-9\\_\:\(\)]+ return type has no value type specified in iterable type array.#'
