add main plugin file to phpstan

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,6 +1,7 @@
 parameters:
   level: 6
   paths:
+    - ./fewer-tags.php
     - ./src
   checkGenericClassInNonGenericObjectType: false
   ignoreErrors:
